# ACS4

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  pyproject.toml
build_nucleo/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cfg/: chconf.h  mcuconf.h
cfg/boards/ACS4_H725/: board.c  board.h
cfg/boards/ACS4_H725_JEDRZEJ/: board.c  board.h
cfg/boards/ACS4_H743/: board.h
cfg/custom_h725/: chconf.h  ffconf.h  halconf.h  mcuconf.h  shellconf.h
cfg/custom_h743/: shellconf.h
cfg/nucleo_h723/: halconf.h  mcuconf.h  shellconf.h
cmake/: arm-none-eabi.cmake
src/: main.c  main.cpp
src/actuators/: actuator_hub.cpp  actuator_hub.h  actuator_threads.cpp  actuator_threads.h
src/drivers/: iim42653.cpp  iim42653.h  mmc5983ma.cpp  mmc5983ma.h  ms5611.cpp  ms5611.h  ms5611_math.cpp  ms5611_math.h  servo_t75.cpp  servo_t75.h  servo_t75_math.cpp  servo_t75_math.h
src/hal/: i2c_bus.cpp  i2c_bus.h  sdmmc.cpp  sdmmc.h  spi_bus.cpp  spi_bus.h
src/logger/: flight_logger.cpp  flight_logger.h  log_format.h  ram_log.cpp  ram_log.h
src/navigation/: quaternion.cpp  quaternion.h
src/sensors/: sensor_hub.cpp  sensor_hub.h  sensor_threads.cpp  sensor_threads.h
src/system/: debug_shell.cpp  debug_shell.h  error_handler.cpp  error_handler.h  params.cpp  params.h  syscalls.c  usb_cdc.cpp  usb_cdc.h  watchdog.cpp  watchdog.h
src/utils/: profiler.cpp  profiler.h  timestamp.h
tests/: CMakeLists.txt
tests/unit/: test_iim42653.cpp  test_ms5611.cpp  test_quaternion.cpp  test_servo_t75.cpp
tools/: log_decoder.py
